test_suite/tests/ui/common/derive_unsafe.rs
use nutype::nutype;

#[nutype(
    derive_unsafe(::std::fmt::Debug),
)]
struct Name(String);

fn main() { }

